# django-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  urls.py
config/settings/: base.py  local.py  test.py
scripts/: pre-requirements.sh
src/foo_bar/: apps.py  urls.py
src/foo_bar/api/v1/: health.py
tests/: test_a.py
