[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Django boilerplate to use as a fast starter point"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alex", email = "alopezariguel@gmail.com" },
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django==6.0.1",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "djangorestframework>=3.16.1,<4.0.0",
    "django-redis>=6.0.0,<7.0.0",
    "redis>=7.0.1,<8.0.0",
    "celery>=5.6.2,<6.0.0",
    "django-celery-beat>=2.8.1,<3.0.0",
    "django-celery-results>=2.6.0,<3.0.0",
    "flower>=2.0.1,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13,<0.15.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-django>=4.11.1,<5.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "pytest-xdist>=3.7.0,<4.0.0",
    "ty>=0.0.12,<0.1.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["**/migrations/**", "scripts/*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

[tool.pytest.ini_options]
addopts = "--nomigrations --ds=config.settings.test"
python_files = "test_*.py tests.py"
pythonpath = [".", "src"]
